# scrapi-sustainability

./: .gitignore  pyproject.toml
core/: brower.py  browser.py  llm.py  merge.py  pdf.py
core/models/: result.py
scrapi-client/: package-lock.json  package.json
tests/: merge_test.py
