[tool.poetry]
name = "scrapi"
version = "0.1.0"
description = ""
authors = ["hdeep03 <hdeep03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
playwright = "^1.47.0"
fastapi = "^0.115.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
